--- a/style.css
+++ b/style.css
@@ -1,16 +1,39 @@
+@font-face {
+  font-family: "dotmatrix";
+  src: url(DOTMATRI.TTF);
+}
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: "dotmatrix", sans-serif;
     text-align: center;
     justify-content: center;
+    padding-top: 50px;
+    background-color: #000000;
+  }
+
+  .buttonss {
+    padding-top: 30px;
+    padding-bottom: 15px;
   }
   
   #display {
-    width: 200px;
+    width: 230px;
     height: 30px;
     font-size: 24px;
     text-align: center;
     padding: 10px;
-    border: 1px solid #ccc;
+    padding-bottom: 30px;
+    padding-top: 30px;
+    border: 2px solid #000000;
+    border-bottom-right-radius: 29px;
+    border-bottom-left-radius: 19px;
+    border-top-right-radius: 19px;
+    border-top-left-radius: 29px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #2d4611;
+    color: #daac09;
+    font-size: 30px;
+    font-family: "dotmatrix";
   }
   
   table {
@@ -18,7 +41,7 @@ body {
   }
   
   td {
-    padding: 10px;
+    padding: 10px; 
   }
   
   button {
@@ -26,9 +49,13 @@ body {
     height: 50px;
     font-size: 24px;
     border: none;
-    border-radius: 5px;
-    background-color: #f0f0f0;
+    border-radius: 15px;
+    background-color: #000000;
     cursor: pointer;
+    color: #9c9a04;
+    padding-top: 4px;
+    font-family: "dotmatrix";
+    
   }
   
   button:hover {
@@ -40,8 +67,8 @@ body {
   }
   
   #equals {
-    background-color: #4CAF50;
-    color: #fff;
+    background-color: #215723;
+    color: #bdc917;
   }
   
   #equals:hover {
@@ -59,5 +86,6 @@ body {
     border: 1px solid #000000;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #daac09;
   }
   
